@@ -125,13 +125,12 @@ public class EntityWolf extends EntityTameable
         this.dataWatcher.updateObject(18, Float.valueOf(this.getHealth()));
     }
 
-    protected void entityInit()
-    {
+    protected void entityInit() {
         super.entityInit();
-        this.dataWatcher.addObject(18, new Float(this.getHealth()));
-        this.dataWatcher.addObject(19, new Byte((byte)0));
-        this.dataWatcher.addObject(20, new Byte((byte)EnumDyeColor.RED.getMetadata()));
-    }
+        this.dataWatcher.addObject(18, Float.valueOf(this.getHealth()));
+        this.dataWatcher.addObject(19, Byte.valueOf((byte)0)); // Updated
+        this.dataWatcher.addObject(20, Byte.valueOf((byte)EnumDyeColor.RED.getMetadata())); // Updated
+    }    
 
     protected void playStepSound(BlockPos pos, Block blockIn)
     {
